fixes XmiCasDB creatuib issues in CS connector tests raised only on Win* environments